Add "Open in colab" clickable badges.

--- a/user_notebooks/fine_tune_multi_label.ipynb
+++ b/user_notebooks/fine_tune_multi_label.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "# SciBERT for Multi-Label Classification\n",
     "\n",
+    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/center-for-threat-informed-defense/tram/blob/main/user_notebooks/fine_tune_multi_label.ipynb)\n",
+    "\n",
     "This notebook allows one to continue fine-tuning our provided SciBERT-for-multilabel-sequence-classification on custom data.\n",
     "\n",
     "To start, first select `Runtime > Change runtime type`, and under `Hardware accelerator` select `GPU`. Then run the next two cells. The first cell will download the model and the Python dependencies. The second cell will load the model and set up the selectors."
