--- a/user_notebooks/fine_tune_single_label.ipynb
+++ b/user_notebooks/fine_tune_single_label.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# SciBERT for Single-Label Classification\n",
     "\n",
+    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/center-for-threat-informed-defense/tram/blob/main/user_notebooks/fine_tune_single_label.ipynb)\n",
+    "\n",
     "This notebook allows one to continue fine-tuning our provided SciBERT-for-singlelabel-sequence-classification on custom data."
    ]
   },
