--- a/user_notebooks/predict_multi_label.ipynb
+++ b/user_notebooks/predict_multi_label.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "# TRAM-LLM, Multi-label\n",
     "\n",
+    "[![image](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/center-for-threat-informed-defense/tram/blob/main/user_notebooks/predict_multi_label.ipynb)\n",
+    "\n",
     "This notebook allows one to apply the multi-label SciBERT model for TRAM.\n",
     "\n",
     "To start, first select `Runtime > Change runtime type`, and under `Hardware accelerator` select `GPU`. Then run the next two cells. The first cell will download the model and the Python dependencies. The second cell will load the model and set up the selectors."
