Update notebooks to pull models from our file host. Also update `fine_tune_single_label` to use the correct model.

--- a/user_notebooks/fine_tune_multi_label.ipynb
+++ b/user_notebooks/fine_tune_multi_label.ipynb
@@ -40,8 +40,8 @@
    "outputs": [],
    "source": [
     "!mkdir scibert_multi_label_model\n",
-    "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1ZYekS8DiADAcq692GvMDgxXNjRxTLySN' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1ZYekS8DiADAcq692GvMDgxXNjRxTLySN\" -O scibert_multi_label_model/pytorch_model.bin && rm -rf /tmp/cookies.txt\n",
-    "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1q7uxBqMYniDYOxRGi0IUWPqQRL8bfkqB' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1q7uxBqMYniDYOxRGi0IUWPqQRL8bfkqB\" -O scibert_multi_label_model/config.json && rm -rf /tmp/cookies.txt\n",
+    "!wget https://ctidtram.blob.core.windows.net/tram-models/multi-label-20230803/config.json -O scibert_multi_label_model/config.json\n",
+    "!wget https://ctidtram.blob.core.windows.net/tram-models/multi-label-20230803/pytorch_model.bin -O scibert_multi_label_model/pytorch_model.bin\n",
     "!pip install torch transformers pandas"
    ]
   },
