--- a/user_notebooks/fine_tune_single_label.ipynb
+++ b/user_notebooks/fine_tune_single_label.ipynb
@@ -13,6 +13,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b52f6f7-1202-4210-aa83-693194fba799",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir scibert_single_label_model\n",
+    "!wget https://ctidtram.blob.core.windows.net/tram-models/single-label-202308303/config.json -O scibert_single_label_model/config.json\n",
+    "!wget https://ctidtram.blob.core.windows.net/tram-models/single-label-202308303/pytorch_model.bin -O scibert_single_label_model/pytorch_model.bin\n",
+    "!pip install torch transformers pandas"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9f55728b-50a9-4073-9570-29a58b8f972d",
    "metadata": {},
@@ -215,7 +228,7 @@
     "cuda = torch.device('cuda')\n",
     "\n",
     "tokenizer = transformers.BertTokenizer.from_pretrained(\"allenai/scibert_scivocab_uncased\", max_length=512)\n",
-    "bert = transformers.BertForSequenceClassification.from_pretrained('../scibert_final_positive/bert_model_2').to(cuda).train()"
+    "bert = transformers.BertForSequenceClassification.from_pretrained('scibert_single_label_model').to(cuda).train()"
    ]
   },
   {
