--- a/user_notebooks/predict_single_label.ipynb
+++ b/user_notebooks/predict_single_label.ipynb
@@ -40,9 +40,9 @@
    },
    "outputs": [],
    "source": [
-    "!mkdir scibert\n",
-    "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=17yY5zs8TPUdGdlw_5e1akA8a2w7-v9JN' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=17yY5zs8TPUdGdlw_5e1akA8a2w7-v9JN\" -O scibert/config.json && rm -rf /tmp/cookies.txt\n",
-    "!wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1i3-d4cgxlBZ6o7ZqmUbIQ79-Mfpqf5Nb' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1i3-d4cgxlBZ6o7ZqmUbIQ79-Mfpqf5Nb\" -O scibert/pytorch_model.bin && rm -rf /tmp/cookies.txt\n",
+    "!mkdir scibert_single_label_model\n",
+    "!wget https://ctidtram.blob.core.windows.net/tram-models/single-label-202308303/config.json -O scibert_single_label_model/config.json\n",
+    "!wget https://ctidtram.blob.core.windows.net/tram-models/single-label-202308303/pytorch_model.bin -O scibert_single_label_model/pytorch_model.bin\n",
     "!pip install torch transformers pandas python-docx pdfplumber bs4"
    ]
   },
@@ -116,7 +116,7 @@
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
-    "bert = transformers.BertForSequenceClassification.from_pretrained('./scibert/').to(device).eval()\n",
+    "bert = transformers.BertForSequenceClassification.from_pretrained('scibert_single_label_model').to(device).eval()\n",
     "tokenizer = transformers.BertTokenizer.from_pretrained('allenai/scibert_scivocab_uncased')\n",
     "\n",
     "import pandas as pd\n",
